level010/parser.output
Terminals unused in grammar

    AND
    OR


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program stmt

    3 stmt: IDENT '=' expr ';'
    4     | IF '(' boolexpr ')' '{' stmts '}'
    5     | IF '(' boolexpr ')' '{' stmts '}' ELSE '{' stmts '}'
    6     | WHILE '(' boolexpr ')' '{' stmts '}'
    7     | DEF IDENT '(' ')' '{' stmts '}'
    8     | IDENT '(' ')' ';'
    9     | expr ';'
   10     | NEWLINE

   11 stmts: ε
   12      | stmts stmt

   13 boolexpr: expr '>' expr
   14         | expr '<' expr
   15         | expr GE expr
   16         | expr LE expr
   17         | expr EQ expr
   18         | expr NE expr
   19         | expr

   20 expr: INTEGER
   21     | IDENT
   22     | expr '+' expr
   23     | expr '-' expr
   24     | expr '*' expr
   25     | expr '/' expr
   26     | '(' expr ')'
   27     | '-' expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 5 6 7 8 26
    ')' (41) 4 5 6 7 8 26
    '*' (42) 24
    '+' (43) 22
    '-' (45) 23 27
    '/' (47) 25
    ';' (59) 3 8 9
    '<' (60) 14
    '=' (61) 3
    '>' (62) 13
    '{' (123) 4 5 6 7
    '}' (125) 4 5 6 7
    error (256)
    INTEGER <ival> (258) 20
    IDENT <sval> (259) 3 7 8 21
    NEWLINE (260) 10
    IF (261) 4 5
    ELSE (262) 5
    WHILE (263) 6
    DEF (264) 7
    GE (265) 15
    LE (266) 16
    EQ (267) 17
    NE (268) 18
    AND (269)
    OR (270)
    UMINUS (271)


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    program (30)
        on left: 1 2
        on right: 0 2
    stmt (31)
        on left: 3 4 5 6 7 8 9 10
        on right: 2 12
    stmts (32)
        on left: 11 12
        on right: 4 5 6 7 12
    boolexpr <val> (33)
        on left: 13 14 15 16 17 18 19
        on right: 4 5 6
    expr <val> (34)
        on left: 20 21 22 23 24 25 26 27
        on right: 3 9 13 14 15 16 17 18 19 22 23 24 25 26 27


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • stmt

    $end     shift, and go to state 2
    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    stmt  go to state 11
    expr  go to state 12


State 2

    0 $accept: program $end •

    $default  accept


State 3

   20 expr: INTEGER •

    $default  reduce using rule 20 (expr)


State 4

    3 stmt: IDENT • '=' expr ';'
    8     | IDENT • '(' ')' ';'
   21 expr: IDENT •

    '='  shift, and go to state 13
    '('  shift, and go to state 14

    $default  reduce using rule 21 (expr)


State 5

   10 stmt: NEWLINE •

    $default  reduce using rule 10 (stmt)


State 6

    4 stmt: IF • '(' boolexpr ')' '{' stmts '}'
    5     | IF • '(' boolexpr ')' '{' stmts '}' ELSE '{' stmts '}'

    '('  shift, and go to state 15


State 7

    6 stmt: WHILE • '(' boolexpr ')' '{' stmts '}'

    '('  shift, and go to state 16


State 8

    7 stmt: DEF • IDENT '(' ')' '{' stmts '}'

    IDENT  shift, and go to state 17


State 9

   27 expr: '-' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 19


State 10

   26 expr: '(' • expr ')'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 20


State 11

    2 program: program stmt •

    $default  reduce using rule 2 (program)


State 12

    9 stmt: expr • ';'
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ';'  shift, and go to state 25


State 13

    3 stmt: IDENT '=' • expr ';'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 26


State 14

    8 stmt: IDENT '(' • ')' ';'

    ')'  shift, and go to state 27


State 15

    4 stmt: IF '(' • boolexpr ')' '{' stmts '}'
    5     | IF '(' • boolexpr ')' '{' stmts '}' ELSE '{' stmts '}'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    boolexpr  go to state 28
    expr      go to state 29


State 16

    6 stmt: WHILE '(' • boolexpr ')' '{' stmts '}'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    boolexpr  go to state 30
    expr      go to state 29


State 17

    7 stmt: DEF IDENT • '(' ')' '{' stmts '}'

    '('  shift, and go to state 31


State 18

   21 expr: IDENT •

    $default  reduce using rule 21 (expr)


State 19

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   27     | '-' expr •

    $default  reduce using rule 27 (expr)


State 20

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | '(' expr • ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ')'  shift, and go to state 32


State 21

   22 expr: expr '+' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 33


State 22

   23 expr: expr '-' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 34


State 23

   24 expr: expr '*' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 35


State 24

   25 expr: expr '/' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 36


State 25

    9 stmt: expr ';' •

    $default  reduce using rule 9 (stmt)


State 26

    3 stmt: IDENT '=' expr • ';'
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ';'  shift, and go to state 37


State 27

    8 stmt: IDENT '(' ')' • ';'

    ';'  shift, and go to state 38


State 28

    4 stmt: IF '(' boolexpr • ')' '{' stmts '}'
    5     | IF '(' boolexpr • ')' '{' stmts '}' ELSE '{' stmts '}'

    ')'  shift, and go to state 39


State 29

   13 boolexpr: expr • '>' expr
   14         | expr • '<' expr
   15         | expr • GE expr
   16         | expr • LE expr
   17         | expr • EQ expr
   18         | expr • NE expr
   19         | expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    GE   shift, and go to state 40
    LE   shift, and go to state 41
    EQ   shift, and go to state 42
    NE   shift, and go to state 43
    '>'  shift, and go to state 44
    '<'  shift, and go to state 45
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 19 (boolexpr)


State 30

    6 stmt: WHILE '(' boolexpr • ')' '{' stmts '}'

    ')'  shift, and go to state 46


State 31

    7 stmt: DEF IDENT '(' • ')' '{' stmts '}'

    ')'  shift, and go to state 47


State 32

   26 expr: '(' expr ')' •

    $default  reduce using rule 26 (expr)


State 33

   22 expr: expr • '+' expr
   22     | expr '+' expr •
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 22 (expr)


State 34

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   23     | expr '-' expr •
   24     | expr • '*' expr
   25     | expr • '/' expr

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 23 (expr)


State 35

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   24     | expr '*' expr •
   25     | expr • '/' expr

    $default  reduce using rule 24 (expr)


State 36

   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   25     | expr '/' expr •

    $default  reduce using rule 25 (expr)


State 37

    3 stmt: IDENT '=' expr ';' •

    $default  reduce using rule 3 (stmt)


State 38

    8 stmt: IDENT '(' ')' ';' •

    $default  reduce using rule 8 (stmt)


State 39

    4 stmt: IF '(' boolexpr ')' • '{' stmts '}'
    5     | IF '(' boolexpr ')' • '{' stmts '}' ELSE '{' stmts '}'

    '{'  shift, and go to state 48


State 40

   15 boolexpr: expr GE • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 49


State 41

   16 boolexpr: expr LE • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 50


State 42

   17 boolexpr: expr EQ • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 51


State 43

   18 boolexpr: expr NE • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 52


State 44

   13 boolexpr: expr '>' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 53


State 45

   14 boolexpr: expr '<' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 54


State 46

    6 stmt: WHILE '(' boolexpr ')' • '{' stmts '}'

    '{'  shift, and go to state 55


State 47

    7 stmt: DEF IDENT '(' ')' • '{' stmts '}'

    '{'  shift, and go to state 56


State 48

    4 stmt: IF '(' boolexpr ')' '{' • stmts '}'
    5     | IF '(' boolexpr ')' '{' • stmts '}' ELSE '{' stmts '}'

    $default  reduce using rule 11 (stmts)

    stmts  go to state 57


State 49

   15 boolexpr: expr GE expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 15 (boolexpr)


State 50

   16 boolexpr: expr LE expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 16 (boolexpr)


State 51

   17 boolexpr: expr EQ expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 17 (boolexpr)


State 52

   18 boolexpr: expr NE expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 18 (boolexpr)


State 53

   13 boolexpr: expr '>' expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 13 (boolexpr)


State 54

   14 boolexpr: expr '<' expr •
   22 expr: expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 14 (boolexpr)


State 55

    6 stmt: WHILE '(' boolexpr ')' '{' • stmts '}'

    $default  reduce using rule 11 (stmts)

    stmts  go to state 58


State 56

    7 stmt: DEF IDENT '(' ')' '{' • stmts '}'

    $default  reduce using rule 11 (stmts)

    stmts  go to state 59


State 57

    4 stmt: IF '(' boolexpr ')' '{' stmts • '}'
    5     | IF '(' boolexpr ')' '{' stmts • '}' ELSE '{' stmts '}'
   12 stmts: stmts • stmt

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10
    '}'      shift, and go to state 60

    stmt  go to state 61
    expr  go to state 12


State 58

    6 stmt: WHILE '(' boolexpr ')' '{' stmts • '}'
   12 stmts: stmts • stmt

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10
    '}'      shift, and go to state 62

    stmt  go to state 61
    expr  go to state 12


State 59

    7 stmt: DEF IDENT '(' ')' '{' stmts • '}'
   12 stmts: stmts • stmt

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10
    '}'      shift, and go to state 63

    stmt  go to state 61
    expr  go to state 12


State 60

    4 stmt: IF '(' boolexpr ')' '{' stmts '}' •
    5     | IF '(' boolexpr ')' '{' stmts '}' • ELSE '{' stmts '}'

    ELSE  shift, and go to state 64

    $default  reduce using rule 4 (stmt)


State 61

   12 stmts: stmts stmt •

    $default  reduce using rule 12 (stmts)


State 62

    6 stmt: WHILE '(' boolexpr ')' '{' stmts '}' •

    $default  reduce using rule 6 (stmt)


State 63

    7 stmt: DEF IDENT '(' ')' '{' stmts '}' •

    $default  reduce using rule 7 (stmt)


State 64

    5 stmt: IF '(' boolexpr ')' '{' stmts '}' ELSE • '{' stmts '}'

    '{'  shift, and go to state 65


State 65

    5 stmt: IF '(' boolexpr ')' '{' stmts '}' ELSE '{' • stmts '}'

    $default  reduce using rule 11 (stmts)

    stmts  go to state 66


State 66

    5 stmt: IF '(' boolexpr ')' '{' stmts '}' ELSE '{' stmts • '}'
   12 stmts: stmts • stmt

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10
    '}'      shift, and go to state 67

    stmt  go to state 61
    expr  go to state 12


State 67

    5 stmt: IF '(' boolexpr ')' '{' stmts '}' ELSE '{' stmts '}' •

    $default  reduce using rule 5 (stmt)
